[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.8.22,<0.11.0",
]

[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0.dev0"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
keywords = [
    "{{ cookiecutter.project_name }}",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Core dependencies
    {%- if cookiecutter.command_line_interface == "click" %}
    "click",
    {%- elif cookiecutter.command_line_interface == "typer" %}
    "typer",
    {%- endif %}
]
{% if cookiecutter.command_line_interface != "none" %}
[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug}}.cli:main"
{% endif %}
[project.urls]
Documentation = "https://pages.nist.gov/{{ cookiecutter.project_name }}/"
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name}}"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "notebook" },
    { include-group = "nox" },
    { include-group = "pytest-accept" },
    { include-group = "test" },
    { include-group = "test-notebook" },
    { include-group = "type" },
]
test = [
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
    { include-group = "pytest" },
]
type = [
    { include-group = "pylint" },
    { include-group = "pytest" },
    { include-group = "typecheck-runner" },
]
docs = [
    {%- if cookiecutter.sphinx_use_autodocsumm %}
    "autodocsumm",
    {%- endif %}
    {%- if cookiecutter.sphinx_theme == "furo" %}
    "furo",
    {%- endif %}
    "myst-nb",
    "sphinx>=5.3.0",
    # myst-parser, ipython,
    {%- if cookiecutter.command_line_interface == "argparse" %}
    "sphinx-argparse",
    {%- endif %}
    {%- if cookiecutter.sphinx_theme == "sphinx_book_theme" %}
    "sphinx-book-theme",
    {%- endif %}
    {%- if cookiecutter.command_line_interface in ["click", "typer"] %}
    "sphinx-click",
    {%- endif %}
    "sphinx-copybutton",
]
# other groups
basedpyright = [ "basedpyright>=1.31.3" ]
cog = [ "cogapp" ]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
ipython = [ "ipython" ]
mypy = [ "mypy[faster-cache]>=1.15.0" ]
notebook = [ "ipykernel", "nbclient" ]
nox = [ "nox>=2025.5.1" ]
pylint = [ "pylint" ]
pytest = [ "pytest" ]
pytest-accept = [ "pytest-accept" ]
test-extras = [
    { include-group = "test" },
]
test-notebook = [
    "nbval",
    { include-group = "test" },
]
typecheck-runner = [ "typecheck-runner>=0.1.0; python_version>'3.9'" ]

# * uv -------------------------------------------------------------------------

[tool.uv]
required-version = ">=0.7.15"
default-groups = [ "dev" ]
fork-strategy = "requires-python"
managed = true
build-backend.source-include = [ "tests/**" ]
pip.annotation-style = "line"
pip.generate-hashes = true

[tool.uv.dependency-groups]
cog.requires-python = ">=3.14"
dev.requires-python = ">=3.14"
docs-live.requires-python = ">=3.14"
docs-spelling.requires-python = ">=3.14"
docs.requires-python = ">=3.14"
ipython.requires-python = ">=3.14"
mypy.requires-python = ">=3.14"
notebook.requires-python = ">=3.14"
nox.requires-python = ">=3.14"

# * Checks ---------------------------------------------------------------------

[tool.repo-review]
ignore = [
    "NOX103", # I prefer using "nox.options.sessions"
    "PC111",  # use doccmd instead of blacken-docs
    "PC140",  # do this externally
    "PC160",  # use typos
    "PC170",  # pygrep
]

[tool.check-wheel-contents]
src_dir = [ "src" ]
toplevel = [ "{{ cookiecutter.project_slug }}" ]

[tool.pyproject-fmt]
# max_supported_python = "3.13"
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
    "tool.mypy.overrides",
    "tool.pyproject2conda",
    "tool.pyright.executionEnvironments",
    "tool.pytest",
    "tool.typos",
    "tool.uv.dependency-groups",
]
indent = 4
keep_full_version = true

[tool.typos.default.extend-identifiers]
CPY = "CPY"

# * Testing --------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
testpaths = [
    "README.md",
    "{{ cookiecutter.project_slug }}",
    "tests",
]
# options
filterwarnings = [ "error" ]
log_cli_level = "INFO"
log_level = "INFO"
minversion = "8"
strict_xfail = "true"

[tool.coverage]
run.branch = true
paths.source = [
    "src/",
    # needed for testing source if not editable install
    ".nox/**/site-packages/",
]
report.exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    "*/_typing.py",
    "*/vendored/*",
]
report.show_missing = true

# * typecheck ---------------------------------------------------------------------

[tool.mypy]
exclude = [
    ".eggs",
    ".nox",
    ".numba_cache",
    ".tox",
    ".venv",
    "docs",
]
files = [
    "src",
    "tests",
]
strict = true
# options
check_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

# [[tool.mypy.overrides]]
# ignore_missing_imports = true
# module = [  ]

# [[tool.mypy.overrides]]
# ignore_errors = true
# module = [  ]

[tool.pyrefly]
enabled-ignores = [ "pyrefly" ]
project-includes = [ "src", "tests" ]

[tool.pyright]
exclude = [
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/__pycache__",
    ".nox/**",
    ".tox/**",
    ".venv/**",
]
include = [
    "src",
    "tests",
]
typeCheckingMode = "strict"
# typeCheckingMode= "standard"
# strict = [
#     "src",
#     "tests",
#     "noxfile.py",
#     "tools/*.py",
# ]
# options
# reportMissingSuperCall = true
deprecateTypingAliases = true
enableReachabilityAnalysis = false
enableTypeIgnoreComments = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImportCycles = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedCallResult = true
# type-checkers should type-check; linters should lint
reportImplicitStringConcatenation = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnusedVariable = false

[[tool.pyright.executionEnvironments]]
root = "tests"
# reportArgumentType = false
# reportCallIssue = false
# reportMissingImports = false
reportUnusedCallResult = false

[tool.ty]
# Disable support for `type: ignore` comments
analysis.respect-type-ignore-comments = false
src.include = [ "src", "tests" ]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }

[tool.pyproject2conda.envs.dev]
groups = "dev"

[tool.pyproject2conda.envs.pre-commit-additional-dependencies]
reqs = [
    "rust-just",
]
groups = [
    "cog",
]
skip-package = true
style = "requirements"

[tool.pyproject2conda.envs.test]
groups = "test"
python = "all"

[tool.pyproject2conda.envs.test-extras]
groups = "test-extras"
python = "all"
skip-package = true

[tool.pyproject2conda.envs.uvx-tools]
reqs = [
    # these used solely for specking tools to be run via uvx ...
    "conda-lock>=2.5.5",
    "copier",
    "copier-template-extensions>=0.3.1",
    "cruft",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "prek",
    "pyrefly>=0.37.0",
    "pyright>=1.1.396",
    "scriv",
    "twine>=5.0.0",
    "ty>=0.0.14",
]
groups = [
    "basedpyright",
    "cog",
    "mypy",
    "nox",
    "typecheck-runner",
]
skip-package = true
style = "requirements"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]
