[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.11.8,<0.12.0",
]

[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0.dev0"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
keywords = [
    "{{ cookiecutter.project_name }}",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Core dependencies
    {%- if cookiecutter.command_line_interface == "click" %}
    "click",
    {%- elif cookiecutter.command_line_interface == "typer" %}
    "typer",
    {%- endif %}
]
{% if cookiecutter.command_line_interface != "none" %}
[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug}}.cli:main"
{% endif %}
[project.urls]
Documentation = "https://pages.nist.gov/{{ cookiecutter.project_name }}/"
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name}}"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    {%- if cookiecutter.use_jupyter %}
    { include-group = "notebook" },
    {%- endif %}
    { include-group = "nox" },
    { include-group = "pytest-accept" },
    { include-group = "test" },
    {%- if cookiecutter.use_jupyter %}
    { include-group = "test-notebook" },
    {%- endif %}
    { include-group = "type" },
]
test = [
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
    { include-group = "pytest" },
]
type = [
    { include-group = "nox" },
    { include-group = "pylint" },
    { include-group = "pytest" },
    { include-group = "typecheck-runner" },
]
docs = [
    {%- if cookiecutter.sphinx_use_autodocsumm %}
    "autodocsumm",
    {%- endif %}
    {%- if cookiecutter.sphinx_theme == "furo" %}
    "furo",
    {%- endif %}
    {%- if cookiecutter.use_jupyter %}
    "myst-nb",
    {%- else %}
    "myst-parser",
    {%- endif %}
    "sphinx>=5.3.0",
    # other
    {%- if cookiecutter.command_line_interface == "argparse" %}
    "sphinx-argparse",
    {%- endif %}
    {%- if cookiecutter.sphinx_theme == "sphinx_book_theme" %}
    "sphinx-book-theme",
    {%- endif %}
    {%- if cookiecutter.command_line_interface in ["click", "typer"] %}
    "sphinx-click",
    {%- endif %}
    "sphinx-copybutton",
]
# other groups
basedpyright = [ "basedpyright>=1.31.3" ]
cog = [ "cogapp" ]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
ipython = [ "ipython" ]
mypy = [ "mypy[faster-cache]>=1.20.1" ]
{%- if cookiecutter.use_jupyter %}
notebook = [ "ipykernel", "nbclient" ]
{%- endif %}
nox = [ "nox>=2026.4.10" ]
pylint = [ "pylint" ]
pytest = [ "pytest" ]
pytest-accept = [ "pytest-accept" ]
test-extras = [
    { include-group = "test" },
]
{%- if cookiecutter.use_jupyter %}
test-notebook = [
    "nbval",
    { include-group = "test" },
]
{%- endif %}
typecheck-runner = [ "typecheck-runner>=0.2.0; python_version>'3.9'" ]

# * uv -------------------------------------------------------------------------
[tool.uv]
required-version = ">=0.7.15"
default-groups = [ "dev" ]
fork-strategy = "requires-python"
exclude-newer = "7 days"
managed = true
build-backend.source-include = [ "tests/**" ]
pip.annotation-style = "line"
pip.generate-hashes = true

[tool.uv.dependency-groups]
cog.requires-python = ">=3.14"
dev.requires-python = ">=3.14"
docs-live.requires-python = ">=3.14"
docs-spelling.requires-python = ">=3.14"
docs.requires-python = ">=3.14"
ipython.requires-python = ">=3.14"
mypy.requires-python = ">=3.14"
{%- if cookiecutter.use_jupyter %}
notebook.requires-python = ">=3.14"
{%- endif %}
nox.requires-python = ">=3.14"

# * Checks ---------------------------------------------------------------------
[tool.repo-review]
ignore = [
    "NOX103", # I prefer using "nox.options.sessions"
    "PC111",  # use doccmd instead of blacken-docs
    "PC140",  # do this externally
    "PC160",  # use typos
    "PC170",  # pygrep
]

[tool.check-wheel-contents]
src_dir = [ "src" ]
toplevel = [ "{{ cookiecutter.project_slug }}" ]

[tool.pyproject-fmt]
# max_supported_python = "3.13"
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
    "tool.mypy.overrides",
    "tool.pyproject2conda",
    "tool.pyright.executionEnvironments",
    "tool.pytest",
    "tool.typos",
    "tool.uv.dependency-groups",
]
indent = 4
keep_full_version = true

{%- if cookiecutter.use_jupyter %}

[tool.typos.default]
# nbqa generated
extend-ignore-re = [ "# %%NBQA-.*" ]
{%- endif %}

[tool.typos.default.extend-identifiers]
CPY = "CPY"

{%- if cookiecutter.use_jupyter %}

[tool.typos.type.jupyter]
# only check file name for notebooks.  Use nbaq for contents.
check-file = false
{%- endif %}

# * typecheck ---------------------------------------------------------------------
[tool.mypy]
files = [
    "src",
    "tests",
    # tools
    "noxfile.py",
    "tools",
]
strict = true
# options
check_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

# [[tool.mypy.overrides]]
# ignore_missing_imports = true
# module = [  ]
#
# [[tool.mypy.overrides]]
# ignore_errors = true
# module = [  ]
#
[tool.pyrefly]
enabled-ignores = [ "pyrefly" ]
project-includes = [
    "src",
    "tests",
    # tools
    "noxfile.py",
    "tools",
]
search-path = [ "." ]

[tool.pyright]
exclude = [
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/__pycache__",
    ".nox/**",
    ".tox/**",
    ".venv/**",
]
include = [
    "src",
    "tests",
    # tools
    "noxfile.py",
    "tools",
]
typeCheckingMode = "strict"
# typeCheckingMode= "standard"
# strict = [
#     "src",
#     "tests",
#     "noxfile.py",
#     "tools/*.py",
# ]
# options
# reportMissingSuperCall = true
deprecateTypingAliases = true
enableReachabilityAnalysis = false
enableTypeIgnoreComments = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImportCycles = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedCallResult = true
# type-checkers should type-check; linters should lint
reportImplicitStringConcatenation = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnusedVariable = false

[[tool.pyright.executionEnvironments]]
root = "tests"
# reportArgumentType = false
# reportCallIssue = false
# reportMissingImports = false
reportUnusedCallResult = false

[tool.ty]
# Disable support for `type: ignore` comments
analysis.respect-type-ignore-comments = false
src.include = [
    "src",
    "tests",
    # tools
    "noxfile.py",
    "tools",
]

# * Testing --------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
testpaths = [
    "README.md",
    "{{ cookiecutter.project_slug }}",
    "tests",
]
# options
filterwarnings = [ "error" ]
log_cli_level = "INFO"
log_level = "INFO"
minversion = "8"
strict_xfail = "true"

[tool.coverage]
run.branch = true
run.source = [
    "{{ cookiecutter.project_slug }}",
]
paths.source = [
    "src/",
    # needed for testing source if not editable install
    ".nox/**/site-packages/",
    "*/.nox/**/site-packages",
    "*/src",
]
report.exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    "*/_typing.py",
    "*/vendored/*",
]
report.show_missing = true

# * Dependency creation --------------------------------------------------------
[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }

[tool.pyproject2conda.envs.dev]
groups = "dev"

[tool.pyproject2conda.envs.test]
groups = "test"
python = "all"

[tool.pyproject2conda.envs.test-extras]
groups = "test-extras"
python = "all"
skip-package = true

[tool.pyproject2conda.envs.uvx-tools]
reqs = [
    # these used solely for specking tools to be run via uvx ...
    "conda-lock>=2.5.5",
    {%- if cookiecutter.__copier %}
    "copier",
    "copier-template-extensions>=0.3.1",
    {%- endif %}
    {%- if not cookiecutter.__copier %}
    "cruft",
    {%- endif %}
    "grayskull>=2.5.3",
    {%- if cookiecutter.use_jupyter %}
    "nbqa>=1.8.4",
    {%- endif %}
    "prek",
    "pyrefly>=0.37.0",
    "pyright>=1.1.396",
    "rooster>=0.1.1",
    "twine>=5.0.0",
    "ty>=0.0.14",
]
groups = [
    "basedpyright",
    "cog",
    "mypy",
    "nox",
    "typecheck-runner",
]
skip-package = true
style = "requirements"

# * Other tools ----------------------------------------------------------------
[tool.commitizen]
use_shortcuts = true

[tool.rooster]
changelog_contributors = true
major-labels = [ "breaking" ]
minor_labels = [ "enhancement" ]
patch-labels = [ "bug", "documentation" ]
# options
ignore-labels = [ "internal" ]
require-labels = [ "breaking", "bug", "documentation", "enhancement" ]
version_files = [
    "pyproject.toml",
]
# sections
section-labels."Breaking changes" = [ "breaking" ]
section-labels."Bug fixes" = [ "bug" ]
section-labels.Documentation = [ "documentation" ]
section-labels.Enhancements = [ "enhancement" ]
section-labels.Internal = [ "internal" ]
section-labels."Other changes" = [ "__unknown__" ]
